--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -13,7 +13,7 @@
     width: 390px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    // border: 2px solid black;
+    border: 1px solid black;
     overflow: hidden;
 
     .clientList {
@@ -22,6 +22,11 @@
         align-items: center;
         height: 63px;
         padding: 0px 10px;
+        cursor: pointer;
+
+        &:hover{
+            background-color: rgba(100, 100, 100, 0.1);;
+        }
 
         .heading {
             .mainHeading{
