--- a/src/components/PaymentMode/PaymentOption.scss
+++ b/src/components/PaymentMode/PaymentOption.scss
@@ -87,6 +87,7 @@
             display: flex;
             justify-content: space-around;
             width: 90%;
+            cursor: pointer;
             
             .paymentMode{
                 display: flex;
